RESOLVED FIXED224456
Inspector code is wrongly including some private headers
https://bugs.webkit.org/show_bug.cgi?id=224456
Summary Inspector code is wrongly including some private headers
Don Olmstead
Reported 2021-04-12 15:35:50 PDT
Attachments
Patch (3.03 KB, patch)
2021-04-12 15:42 PDT, Don Olmstead
no flags
Don Olmstead
Comment 1 2021-04-12 15:42:15 PDT
Alex Christensen
Comment 2 2021-04-12 17:09:27 PDT
Comment on attachment 425800 [details] Patch It didn't break the internal build. Let's do this.
EWS
Comment 3 2021-04-12 17:36:36 PDT
Committed r275850 (236415@main): <https://commits.webkit.org/236415@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 425800 [details].
Radar WebKit Bug Importer
Comment 4 2021-04-12 17:37:13 PDT
Note You need to log in before you can comment on or make changes to this bug.