Inspector code is wrongly including some private headers https://bugs.webkit.org/show_bug.cgi?id=224456

Reviewed by Alex Christensen.

These files were including some headers using #include <JavaScriptCore/Foo.h> style instead
of "Foo.h" style. This caused a build error when attempting to revive the Mac CMake build
since those headers were private and private headers are generated after the JavaScriptCore
build. No other ports were have ENABLE_INSPECTOR_ALTERNATE_DISPATCHERS turned on so the
issue hadn't manifested until now.

* API/JSContextRefInspectorSupport.h:
* inspector/augmentable/AlternateDispatchableAgent.h:
* inspector/augmentable/AugmentableInspectorController.h:


Canonical link: https://commits.webkit.org/236415@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275850 268f45cc-cd09-0410-ab3c-d52691b4dbfc