Source/JavaScriptCore/inspector/augmentable/AlternateDispatchableAgent.h
@@ -27,8 +27,8 @@
 
 #if ENABLE(INSPECTOR_ALTERNATE_DISPATCHERS)
 
+#include "InspectorAgentBase.h"
 #include "InspectorAlternateBackendDispatchers.h"
-#include <JavaScriptCore/InspectorAgentBase.h>
 #include <wtf/Forward.h>
 
 namespace Inspector {
